# mattiasdrp.github.io

./: .gitignore  cellular_automata.html  index.html  pythagoras.html  rugby.html
cellular_automata/: cellular_automata.html  elm.js  elm.json  index.html  main.js
cellular_automata/src/: Main.elm
elm_pythagore_tree/: README.org  elm.js  elm.json  index.html
elm_pythagore_tree/doc/: .latexmkrc  figure1.tex  figure2.tex  figure3.tex
elm_pythagore_tree/doc/auto/: figure1.el  figure2.el  figure3.el
elm_pythagore_tree/src/: Main.elm  Pythagoras_tree.elm
hello_elm/: elm.js
team_shuffler/: dune-project  team_shuffler.opam  test-equipe-aleatoire.csv
team_shuffler/frontend/: dune  lib.ml  lib.mli  main.ml
team_shuffler_elm/: elm.js  elm.json
team_shuffler_elm/src/: Decoder.elm  Main.elm
